--- a/.config
+++ b/.config
@@ -155,6 +155,7 @@ CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-watchcat-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-wireguard-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-wrtbwmon-zh-cn=y
+CONFIG_PACKAGE_luci-proto-openconnec=y
 CONFIG_PACKAGE_luci-lib-httpprotoutils=y
 CONFIG_PACKAGE_luci-lib-json=y
 CONFIG_PACKAGE_luci-lib-luaneightbl=y
@@ -212,6 +213,7 @@ CONFIG_SQLITE3_JSON1=y
 CONFIG_SQLITE3_RTREE=y
 CONFIG_SQUID_enable-dlmalloc=y
 CONFIG_SQUID_enable-ipv6=y
+CONFIG_PACKAGE_openconnect=y
 CONFIG_SQUID_use-openssl=y
 CONFIG_TARGET_EXT4_BLOCKSIZE=4096
 CONFIG_TARGET_EXT4_BLOCKSIZE_4K=y
